roll back css rules, unhide email addresses, fix flex on safari

--- a/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/_faceted.scss
+++ b/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/_faceted.scss
@@ -19,7 +19,10 @@
 
 .faceted-widget {
 }
-
+/*tiles */
+.caption .tile-email{
+	font-size:0.6875rem !important;;
+}
 /* Areas
 */
 
