--- a/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/_plone.scss
+++ b/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/_plone.scss
@@ -122,19 +122,7 @@ a.hasDropDown {
 
 
 
-/*---- Person tile -----*/
-span.personName {
-position: relative;
-padding-left: 20px;
-display: flex;
-margin-right: 0;
-padding-top: 5px;
-padding-bottom: 10px;
-font-size:0.86em;
-}
-.labs {
-padding-top: 5px;
-}
+
 /*---- Person portlet ---*/
 .adr {
 	padding-left:35px;
